<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.35"
    android:background="@color/black"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_bottom"
        android:backgroundTint="@color/dark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:alpha=".7"
            android:fontFamily="@font/play_ball"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="70sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="256dp"
            android:layout_height="55dp"
            android:layout_below="@id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/edit_text_username"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/password"
            android:layout_width="256dp"
            android:layout_height="55dp"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/passwordVerify"
            android:layout_width="256dp"
            android:layout_height="55dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/rounded"
            android:ems="10"
            android:hint="@string/edit_text_verify_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textAlignment="center" />

        <Button
            android:id="@+id/register"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_below="@id/passwordVerify"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:alpha=".7"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/primary"
            android:onClick="register"
            android:text="@string/button_register"
            android:textColor="@color/light" />

        <TextView
            android:id="@+id/loginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:onClick="loginPage"
            android:text="@string/text_login"
            android:textColor="@color/light" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>